--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Pacifico&display=swap" rel="stylesheet">
+    <style>
+        @keyframes colorShift {
+            0% {
+                background-color: #87CEEB; /* Sky blue */
+            }
+            33% {
+                background-color: #FFB6C1; /* Light pink */
+            }
+            66% {
+                background-color: #CCCCFF; /* Periwinkle */
+            }
+            100% {
+                background-color: #87CEEB; /* Back to sky blue */
+            }
+        }
+
+        body {
+            animation: colorShift 15s infinite;
+            background-color: #87CEEB; /* Initial color */
+        }
+
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent url('stars.png') repeat top center;
+            z-index: -2;
+        }
+
+        .twinkling {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent url('twinkling.png') repeat top center;
+            z-index: -1;
+            animation: move-twink-back 200s linear infinite;
+        }
+
+        @keyframes move-twink-back {
+            from {background-position: 0 0;}
+            to {background-position: -10000px 5000px;}
+        }
+    </style>
 </head>
 <body>
     <div class="stars"></div>
