--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Melanie's Whimsical World</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Pacifico&family=Comfortaa:wght@400;600&display=swap" rel="stylesheet">
     <style>
         @keyframes colorShift {
             0% {
@@ -64,6 +64,11 @@
             margin: 0 auto;
             padding: 2rem;
             text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
         }
 
         .welcome {
@@ -96,6 +101,8 @@
             margin: 1rem 0;
             color: #fff;
             text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+            font-family: 'Comfortaa', cursive;
+            font-weight: 600;
         }
 
         .navigation {
@@ -143,6 +150,7 @@
         .text {
             font-size: 1.2rem;
             font-weight: 600;
+            font-family: 'Comfortaa', cursive;
         }
 
         .floating-elements {
