--- a/index.html
+++ b/index.html
@@ -214,13 +214,18 @@
 
         .bubble {
             position: fixed;
-            background: rgba(255, 255, 255, 0.3);
+            background: linear-gradient(135deg, 
+                rgba(255, 255, 255, 0.3) 0%,
+                rgba(255, 255, 255, 0.1) 50%,
+                rgba(255, 255, 255, 0.3) 100%);
             border: 5px solid rgba(255, 255, 255, 0.3);
             border-radius: 50%;
             pointer-events: none;
             animation: float-up linear forwards;
             backdrop-filter: blur(2px);
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+            box-shadow: 
+                0 0 20px rgba(255, 255, 255, 0.2),
+                inset 0 0 20px rgba(255, 255, 255, 0.1);
             z-index: 1;
         }
 
