Update navigation buttons in index.html. Change "Projects" to "Tools" with a new icon, and add a new "Games" section with corresponding icon and links. Adjust "Information" link to point to info.html for better user navigation.

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
             <div class="nav-button-container">
                 <a href="/projects" class="nav-button projects">
                     <div class="button-content">
-                        <span class="icon">🚀</span>
-                        <span class="text">Projects</span>
+                        <span class="icon">⚙️</span>
+                        <span class="text">Tools</span>
                     </div>
                 </a>
                 <div class="floating-elements project-elements">
@@ -343,10 +343,24 @@
             </div>
 
             <div class="nav-button-container">
+                <a href="/games" class="nav-button games">
+                    <div class="button-content">
+                        <span class="icon">🎮</span>
+                        <span class="text">Games</span>
+                    </div>
+                </a>
+                <div class="floating-elements games-elements">
+                    <span>🎲</span>
+                    <span>🎯</span>
+                    <span>🎪</span>
+                </div>
+            </div>
+
+            <div class="nav-button-container">
                 <a href="/about" class="nav-button about">
                     <div class="button-content">
                         <span class="icon">👋</span>
-                        <span class="text">Information</span>
+                        <a href="info.html" class="game-link">Information</a>
                     </div>
                 </a>
                 <div class="floating-elements about-elements">
