Update "Information" button in index.html. Replace link text with a span for better styling and add an empty anchor for improved accessibility.

--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
                 <a href="/about" class="nav-button about">
                     <div class="button-content">
                         <span class="icon">👋</span>
-                        <a href="info.html" class="game-link">Information</a>
+                        <span class="text">Information</span>
+                        <a href="info.html" class="info"></a>
                     </div>
                 </a>
                 <div class="floating-elements about-elements">
