Update "Information" button link in index.html to point directly to about.html for improved navigation consistency.

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
 
             <div class="nav-button-container">
-                <a href="/about" class="nav-button about">
+                <a href="about.html" class="nav-button about">
                     <div class="button-content">
                         <span class="icon">👋</span>
                         <span class="text">Information</span>
