Update back button link in about.html to point to index.html for improved navigation consistency.

--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
     <div class="twinkling"></div>
     
     <img src="logo.png" alt="Melanie's Logo" class="logo">
-    <a href="/" class="back-button">← Back</a>
+    <a href="index.html" class="back-button">← Back</a>
     
     <main class="container">
         <h1>Information</h1>
