--- a/games.html
+++ b/games.html
@@ -123,10 +123,16 @@
             transform: scale(1.1) rotate(5deg);
         }
 
-        .back-button {
+        .nav-sidebar {
             position: fixed;
             top: 140px;
             left: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .nav-sidebar a {
             text-decoration: none;
             color: white;
             padding: 0.8rem 1.5rem;
@@ -137,12 +143,19 @@
             transition: all 0.3s ease;
             font-family: 'Comfortaa', cursive;
             font-weight: 600;
+            text-align: left;
+            min-width: 120px;
         }
 
-        .back-button:hover {
-            transform: translateY(-3px);
+        .nav-sidebar a:hover {
+            transform: translateX(5px);
             background: rgba(255, 255, 255, 0.2);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .nav-sidebar a.active {
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(255, 255, 255, 0.4);
         }
 
         .sparkle {
@@ -232,7 +245,14 @@
     <div class="twinkling"></div>
     
     <img src="logo.png" alt="Melanie's Logo" class="logo">
-    <a href="index.html" class="back-button">← Back</a>
+    <nav class="nav-sidebar">
+        <a href="index.html">Home</a>
+        <a href="portfolio.html">Art</a>
+        <a href="blog.html">Writing</a>
+        <a href="projects.html">Tools</a>
+        <a href="games.html" class="active">Games</a>
+        <a href="about.html">Information</a>
+    </nav>
     
     <main class="container">
         <h1>Games</h1>
