--- a/blog.html
+++ b/blog.html
@@ -130,6 +130,11 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            transition: transform 0.3s ease;
+        }
+
+        .nav-sidebar.collapsed {
+            transform: translateX(-100%);
         }
 
         .nav-sidebar a {
@@ -156,6 +161,47 @@
         .nav-sidebar a.active {
             background: rgba(255, 255, 255, 0.2);
             border-color: rgba(255, 255, 255, 0.4);
+        }
+
+        .sidebar-toggle {
+            position: fixed;
+            top: 140px;
+            left: 20px;
+            width: 40px;
+            height: 40px;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+
+        .sidebar-toggle:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: scale(1.1);
+        }
+
+        .sidebar-toggle::before {
+            content: '☰';
+            color: white;
+            font-size: 1.5rem;
+        }
+
+        .sidebar-toggle.collapsed {
+            left: 20px;
+        }
+
+        .sidebar-toggle.collapsed::before {
+            content: '☰';
+        }
+
+        .nav-sidebar.collapsed + .sidebar-toggle {
+            left: 20px;
         }
 
         .sparkle {
@@ -253,6 +299,7 @@
         <a href="games.html">Games</a>
         <a href="about.html">Information</a>
     </nav>
+    <div class="sidebar-toggle"></div>
     
     <main class="container">
         <h1>Writing</h1>
@@ -320,6 +367,15 @@
 
         // Start bubble creation
         createBubble();
+
+        // Sidebar toggle functionality
+        const sidebar = document.querySelector('.nav-sidebar');
+        const toggle = document.querySelector('.sidebar-toggle');
+        
+        toggle.addEventListener('click', () => {
+            sidebar.classList.toggle('collapsed');
+            toggle.classList.toggle('collapsed');
+        });
     </script>
 </body>
 </html> 
