Replace back buttons with a centralized sidebar navigation across all pages, enhancing consistency and user experience. Added 'Home' link to the sidebar for improved accessibility.

--- a/games.html
+++ b/games.html
@@ -13,7 +13,6 @@
     <div class="twinkling"></div>
     
     <img src="logo.png" alt="Melanie's Logo" class="logo">
-    <a href="index.html" class="back-button">← Back</a>
     
     <main class="container">
         <h1>Games</h1>
@@ -23,6 +22,7 @@
     </main>
 
     <nav class="nav-sidebar">
+        <a href="index.html">Home</a>
         <a href="portfolio.html">Art</a>
         <a href="blog.html">Writing</a>
         <a href="projects.html">Tools</a>
