--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
     <div class="twinkling"></div>
     
     <img src="logo.png" alt="Melanie's Logo" class="logo">
-    <a href="index.html" class="back-button">← Back</a>
     
     <main class="container">
         <h1>Art</h1>
@@ -23,6 +22,7 @@
     </main>
 
     <nav class="nav-sidebar">
+        <a href="index.html">Home</a>
         <a href="portfolio.html" class="active">Art</a>
         <a href="blog.html">Writing</a>
         <a href="projects.html">Tools</a>
