Refactor navigation structure in index.html and update styles in home.css. Introduced a new layout for navigation buttons with improved alignment and added floating elements for each section. Adjusted CSS to support a vertical navigation layout with centered alignment and consistent spacing.

--- a/index.html
+++ b/index.html
@@ -21,73 +21,77 @@
         </header>
 
         <nav class="navigation">
-            <div class="nav-button-container">
-                <a href="portfolio.html" class="nav-button portfolio">
-                    <div class="button-content">
-                        <span class="icon">🎨</span>
-                        <span class="text">Art</span>
+            <div class="nav-row">
+                <div class="nav-button-container">
+                    <a href="portfolio.html" class="nav-button portfolio">
+                        <div class="button-content">
+                            <span class="icon">🎨</span>
+                            <span class="text">Art</span>
+                        </div>
+                    </a>
+                    <div class="floating-elements portfolio-elements">
+                        <span>✨</span>
+                        <span>🎨</span>
+                        <span>🖌️</span>
                     </div>
-                </a>
-                <div class="floating-elements portfolio-elements">
-                    <span>✨</span>
-                    <span>🎨</span>
-                    <span>🖌️</span>
+                </div>
+
+                <div class="nav-button-container">
+                    <a href="blog.html" class="nav-button blog">
+                        <div class="button-content">
+                            <span class="icon">📝</span>
+                            <span class="text">Writing</span>
+                        </div>
+                    </a>
+                    <div class="floating-elements blog-elements">
+                        <span>📚</span>
+                        <span>✍️</span>
+                        <span>📖</span>
+                    </div>
+                </div>
+
+                <div class="nav-button-container">
+                    <a href="projects.html" class="nav-button projects">
+                        <div class="button-content">
+                            <span class="icon">⚙️</span>
+                            <span class="text">Tools</span>
+                        </div>
+                    </a>
+                    <div class="floating-elements project-elements">
+                        <span>💡</span>
+                        <span>⚙️</span>
+                        <span>🔧</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="nav-button-container">
-                <a href="blog.html" class="nav-button blog">
-                    <div class="button-content">
-                        <span class="icon">📝</span>
-                        <span class="text">Writing</span>
+            <div class="nav-row">
+                <div class="nav-button-container">
+                    <a href="games.html" class="nav-button games">
+                        <div class="button-content">
+                            <span class="icon">🎮</span>
+                            <span class="text">Games</span>
+                        </div>
+                    </a>
+                    <div class="floating-elements games-elements">
+                        <span>🎲</span>
+                        <span>🎯</span>
+                        <span>🎪</span>
                     </div>
-                </a>
-                <div class="floating-elements blog-elements">
-                    <span>📚</span>
-                    <span>✍️</span>
-                    <span>📖</span>
                 </div>
-            </div>
 
-            <div class="nav-button-container">
-                <a href="projects.html" class="nav-button projects">
-                    <div class="button-content">
-                        <span class="icon">⚙️</span>
-                        <span class="text">Tools</span>
+                <div class="nav-button-container">
+                    <a href="about.html" class="nav-button about">
+                        <div class="button-content">
+                            <span class="icon">👋</span>
+                            <span class="text">Information</span>
+                        </div>
+                    </a>
+                    <div class="floating-elements about-elements">
+                        <span>🌟</span>
+                        <span>💫</span>
+                        <span>✨</span>
                     </div>
-                </a>
-                <div class="floating-elements project-elements">
-                    <span>💡</span>
-                    <span>⚙️</span>
-                    <span>🔧</span>
-                </div>
-            </div>
-
-            <div class="nav-button-container">
-                <a href="games.html" class="nav-button games">
-                    <div class="button-content">
-                        <span class="icon">🎮</span>
-                        <span class="text">Games</span>
-                    </div>
-                </a>
-                <div class="floating-elements games-elements">
-                    <span>🎲</span>
-                    <span>🎯</span>
-                    <span>🎪</span>
-                </div>
-            </div>
-
-            <div class="nav-button-container">
-                <a href="about.html" class="nav-button about">
-                    <div class="button-content">
-                        <span class="icon">👋</span>
-                        <span class="text">Information</span>
-                    </div>
-                </a>
-                <div class="floating-elements about-elements">
-                    <span>🌟</span>
-                    <span>💫</span>
-                    <span>✨</span>
                 </div>
             </div>
         </nav>
