Add game buttons in games.html and style them in branch.css for improved user interaction. Introduced a grid layout for buttons and enhanced their appearance with hover effects.

--- a/games.html
+++ b/games.html
@@ -18,7 +18,12 @@
     <main class="container">
         <h1>Games</h1>
         <div class="content-area">
-            <p>Coming Soon</p>
+            <div class="game-buttons">
+                <button class="game-button">Coming Soon</button>
+                <button class="game-button">Coming Soon</button>
+                <button class="game-button">Coming Soon</button>
+                <button class="game-button">Coming Soon</button>
+            </div>
         </div>
     </main>
 
