Replace placeholder text in blog.html with interactive game buttons for enhanced user engagement. Each button is designed for specific writing categories, improving the overall user experience.

--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,10 @@
     
     <main class="container">
         <h1>Writing</h1>
-        <div class="content-area">
-            <p>Coming Soon</p>
+        <div class="game-buttons">
+            <button class="game-button">Fanfiction</button>
+            <button class="game-button">Original Fiction</button>
+            <button class="game-button">Professional/Educational Writing</button>
         </div>
     </main>
 
